apri tutte / chiudi tutte anche per il riepilogo della valutazione

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -708,7 +708,15 @@ h2 {
 	display: none;
 }
 
+.valutazione-collapse {
+	display: none;
+}
+
 .link-collapse {
+	cursor: pointer;
+}
+
+.link-collapse-valutazione {
 	cursor: pointer;
 }
 
