Modellazione Eventi WIP RES inizio GUI

--- a/src/main/resources/templates/pianoFormativo/pianoFormativoShowAll.html
+++ b/src/main/resources/templates/pianoFormativo/pianoFormativoShowAll.html
@@ -14,15 +14,15 @@
 				<div class="x_panel">
               		<div class="x_title">
 						<h2 style="display: inline" th:text="#{label.eventi_piano_formativo}">label.eventi_piano_formativo</h2>
-						<h2 style="display: inline" th:if="${#lists.isEmpty(accreditamentoWrapper.accreditamento.pianoFormativo?.eventi)}" class="red-italic" th:text="#{label.dati_non_inseriti}">label.dati_non_inseriti</h2>
-						<ul class="nav navbar-right panel_toolbox" th:unless="${#lists.isEmpty(accreditamentoWrapper.accreditamento.pianoFormativo?.eventi)}">
+						<h2 style="display: inline" th:if="${#lists.isEmpty(accreditamentoWrapper.accreditamento.pianoFormativo?.eventiPianoFormativo)}" class="red-italic" th:text="#{label.dati_non_inseriti}">label.dati_non_inseriti</h2>
+						<ul class="nav navbar-right panel_toolbox" th:unless="${#lists.isEmpty(accreditamentoWrapper.accreditamento.pianoFormativo?.eventiPianoFormativo)}">
 		                    <li><a class="link-collapse-piano"><i class="fa iconToggle fa-chevron-down"></i></a></li>
                   		</ul>
 						<div class="clearfix"></div>
 					</div>
 
-					<th:block th:if="${accreditamentoWrapper.accreditamento.pianoFormativo != null and !#lists.isEmpty(accreditamentoWrapper.accreditamento.pianoFormativo.eventi)}">
-						<th:block th:each="evento, row : ${accreditamentoWrapper.accreditamento.pianoFormativo.eventi}">
+					<th:block th:if="${accreditamentoWrapper.accreditamento.pianoFormativo != null and !#lists.isEmpty(accreditamentoWrapper.accreditamento.pianoFormativo.eventiPianoFormativo)}">
+						<th:block th:each="evento, row : ${accreditamentoWrapper.accreditamento.pianoFormativo.eventiPianoFormativo}">
 							<h2 th:text="#{label.evento} + ': ' + ${evento.titolo}">label.componente_comitato</h2>
 							<div th:unless="${row.last}" class="divider-dashed"></div>
 							<div th:id="evento+${evento.id}+Block" class="container-collapse" role="iterEvento" th:attr="data-valore-id=${evento.id}"></div>
