--- a/src/main/resources/templates/pianoFormativo/pianoFormativoFragment.html
+++ b/src/main/resources/templates/pianoFormativo/pianoFormativoFragment.html
@@ -15,9 +15,9 @@
 			editabile=${mode == 'edit'},
 			showOnly=${mode == 'show' or mode == 'enableField'},
 			enableField=${false}">
-		<div th:if="${(__${pianoFormativo}__ == null) or #lists.isEmpty(__${pianoFormativo}__.eventi)}" th:text="#{label.nessun_evento_piano_formativo}"></div>
+		<div th:if="${(__${pianoFormativo}__ == null) or #lists.isEmpty(__${pianoFormativo}__.eventiPianoFormativo)}" th:text="#{label.nessun_evento_piano_formativo}"></div>
 
-				<table th:unless="${(__${pianoFormativo}__ == null) or #lists.isEmpty(__${pianoFormativo}__.eventi)}" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%" th:classappend="${'datatable-responsive-evento-'+mode}">
+				<table th:unless="${(__${pianoFormativo}__ == null) or #lists.isEmpty(__${pianoFormativo}__.eventiPianoFormativo)}" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%" th:classappend="${'datatable-responsive-evento-'+mode}">
 					<thead>
 						<tr>
 							<th th:text="#{label.titolo}">Titolo</th>
@@ -28,7 +28,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr th:each="evento, row : ${__${pianoFormativo}__.eventi}">
+						<tr th:each="evento, row : ${__${pianoFormativo}__.eventiPianoFormativo}">
 							<td><a th:text="${evento.titolo}" th:href="@{|${prefixURL}/provider/${__${pianoFormativo}__.provider.id}/pianoFormativo/${__${pianoFormativo}__.id}/evento/${evento.id}/show${urlParam}|}"></a></td>
 							<td th:text="${evento.id} + '-' + ${evento.edizione}"></td>
 							<td th:text="${evento.proceduraFormativa.nome}"></td>
