--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -68,7 +68,7 @@
 
 				<!-- REFEREE -->
 				<div class="row" th:if="${homeWrapper.isReferee}">
-					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4" onclick="goTo('accreditamento/valutazioneReferee/list&filterDone=true')">
+					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4" onclick="goTo('accreditamento/valutazioneReferee/list?filterDone=true')">
 						<div class="tile-stats clickable">
 							<div class="icon"><i class="fa fa-list-alt"></i></div>
 							<div class="col-xs-10">
