--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -83,7 +83,7 @@
 											<select id="referee"
 												class="selectpicker required"
 												data-width="100%" data-style="btn-primary"
-												data-max-options="3"
+												th:attr="data-max-options=${accreditamentoWrapper.refereeDaRiassegnare}"
 												multiple="multiple"
 												th:field="${accreditamentoWrapper.refereeGroup}"
 												data-actions-box="false" data-size="10"
@@ -204,7 +204,7 @@
 					var url = [[@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/|}]] + 'approvaIntegrazione';
 					location.href = url;
 				}
-				
+
 				$('.ajaxCallShowAll').one("click", populateShowAll);
 				if([[${accreditamentoWrapper.canShowValutazioneRiepilogo == true}]]) {
 				 	$('.ajaxCallShowAllValutazioni').one("click", populateShowAllValutazioni);
