--- a/src/main/resources/templates/accreditamento/accreditamentoValidate.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoValidate.html
@@ -65,12 +65,12 @@
 										<div class="divider"></div>
 
 										<div>
-											<h4 th:text="#{label.seleziona_referee}"></h4>
+											<h4 th:text="#{label.seleziona_referee(${numeroReferee})}"></h4>
 											<div class="item modalAlert" th:classappend="${#fields.hasErrors('accreditamentoWrapper.refereeGroup')} ? 'bad'">
 												<select id="referee"
 													class="selectpicker required"
 													data-width="100%" data-style="btn-primary"
-													data-max-options="3"
+													th:attr="data-max-options=${numeroReferee}"
 													multiple="multiple"
 													th:field="${accreditamentoWrapper.refereeGroup}"
 													data-actions-box="false" data-size="10"
