per segreteria/referee dati dei valutatori nella lista dell'accreditam.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -103,7 +103,7 @@
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
-						<div class="tile-stats clickable" onclick="goTo('accreditamento/valutazioneAssegnamento/list?showCarica=true')">
+						<div class="tile-stats clickable" onclick="goTo('accreditamento/valutazioneAssegnamento/list')">
 							<div class="icon"><i class="fa fa-check-square-o"></i></div>
 							<div class="col-xs-10">
 			                	<div class="count" th:text="${homeWrapper.domandeDaValutareAll}"></div>
