--- a/src/main/resources/templates/accreditamento/accreditamentoList.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoList.html
@@ -43,7 +43,7 @@
 										<th th:text="#{label.accreditamento_validazione}">Datavalidazione</th>
 										<th th:text="#{label.accreditamento_scadenza}">Scadenza</th>
 									</th:block>
-									<th th:if="${mappaCarica != null}" th:text="#{label.presa_in_carico_da}">Presa in carico da</th>
+									<th th:if="${mappaCarica != null}" th:text="#{label.lista_valutatori}">Lista Valutatori</th>
 								</tr>
 							</thead>
 							<tbody th:unless="${#lists.isEmpty(accreditamentoList)}" th:remove="all-but-first">
@@ -58,7 +58,10 @@
 										<td th:text="${accreditamento.dataValutazioneCrecm  == null} ? '' : ${#temporals.format(accreditamento.dataValutazioneCrecm, 'dd/MM/yyyy')}">24/05/2014</td>
 										<td th:text="${accreditamento.dataScadenza  == null} ? '' : ${#temporals.format(accreditamento.dataScadenza, 'dd/MM/yyyy')}">24/05/2016</td>
 									</th:block>
-									<td th:if="${mappaCarica != null}" th:text="${(mappaCarica.get(accreditamento.id) != null) ? (mappaCarica.get(accreditamento.id).nome + ' ' + mappaCarica.get(accreditamento.id).cognome) : 'N\D'}">Presa in carico da</td>
+									<td th:if="${mappaCarica != null}">
+										<div th:unless="${#sets.isEmpty(mappaCarica.get(accreditamento.id))}" th:each="valutatore, row : ${mappaCarica.get(accreditamento.id)}" class="valutatore" th:text="${valutatore.isSegreteria() ? 'Segreteria ECM - ' : 'Referee - '} + ${valutatore.getFullName()}"></div>
+										<div th:if="${#sets.isEmpty(mappaCarica.get(accreditamento.id))}" th:text="#{label.da_prendere_in_carica}" class="danger"></div>
+									</td>
 								</tr>
 							</tbody>
 						</table>
