--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -134,7 +134,7 @@
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
-						<div class="tile-stats clickable" onclick="goTo('accreditamento/odg/list')">
+						<div class="tile-stats clickable" onclick="goTo('accreditamento/daInserireODG/list')">
 							<div class="icon"><i class="fa fa-clock-o"></i></div>
 							<div class="col-xs-10">
 			                	<div class="count" th:text="${homeWrapper.domandeInInsODG}"></div>
